--- a/cc.html
+++ b/cc.html
@@ -12,9 +12,9 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/slicknav.css">
+    <link rel="stylesheet" href="/Users/marcoscallearevalo/Desktop/CSS/normalize.css">
+    <link rel="stylesheet" href="/Users/marcoscallearevalo/Desktop/CSS/main.css">
+    <link rel="stylesheet" href="/Users/marcoscallearevalo/Desktop/CSS/slicknav.css">
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
