--- a/home.html
+++ b/home.html
@@ -11,9 +11,9 @@
 
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="/Users/marcoscallearevalo/Desktop/CSS/normalize.css">
-  <link rel="stylesheet" href="/Users/marcoscallearevalo/Desktop/CSS/main.css">
-  <link rel="stylesheet" href="/Users/marcoscallearevalo/Desktop/CSS/slicknav.css">
+  <link rel="stylesheet" href="CSS/normalize.css">
+  <link rel="stylesheet" href="CSS/main.css">
+  <link rel="stylesheet" href="CSS/slicknav.css">
 
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -32,7 +32,7 @@
 
 <body>
   <header class="bg-light text-center py-4">
-    <img src="/Users/marcoscallearevalo/Desktop/Pics/gyms.png" alt="WorkOut Helper Logo" class="img-fluid" style="max-width: 100px;">
+    <img src="Pics/gyms.png" alt="WorkOut Helper Logo" class="img-fluid" style="max-width: 100px;">
     <h1 class="display-4">WorkOut Helper</h1>
     <p class="lead">Better Yourself! Bring out the best in you!</p>
   </header>
@@ -79,7 +79,7 @@
   <main class="container my-5">
     <article class="mb-5">
       <h1 class="text-center text-primary mb-4">Pain is Weakness Leaving the Body</h1>
-      <img src="/Users/marcoscallearevalo/Desktop/Pics/1094f5673c55a6ab034499ce03cc6027.jpg" alt="David Laid Pool" class="img-fluid mb-3">
+      <img src="Pics/1094f5673c55a6ab034499ce03cc6027.jpg" alt="David Laid Pool" class="img-fluid mb-3">
       <p>The gym is essential for physical and mental well-being. Regular exercise improves heart health, builds muscle, increases flexibility, and helps manage weight. These benefits contribute to reducing the risk of chronic diseases like heart disease, diabetes, and obesity. Beyond physical health, gym workouts release endorphins, which reduce stress, alleviate anxiety, and enhance mood, leading to better mental well-being.</p>
       <p>Learning about the gym and proper exercise techniques is vital for effective and safe workouts. Knowledge of correct form and equipment usage minimizes injury risk and maximizes results. Understanding fitness principles, such as progressive overload and rest, helps achieve goals faster and more sustainably.</p>
       <p>The gym also fosters a supportive community, where people can find motivation and encouragement. By incorporating gym workouts into your life and understanding their benefits, you’re investing in long-term health and resilience for both body and mind.</p>
