--- a/cc.html
+++ b/cc.html
@@ -12,9 +12,9 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="/Users/marcoscallearevalo/Desktop/CSS/normalize.css">
-    <link rel="stylesheet" href="/Users/marcoscallearevalo/Desktop/CSS/main.css">
-    <link rel="stylesheet" href="/Users/marcoscallearevalo/Desktop/CSS/slicknav.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/main.css">
+    <link rel="stylesheet" href="CSS/slicknav.css">
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -32,7 +32,7 @@
 
 <body>
     <header class="bg-light text-center py-4">
-        <img src="/Users/marcoscallearevalo/Desktop/Pics/gyms.png" alt="WorkOut Helper Logo" class="img-fluid" style="max-width: 100px;">
+        <img src="Pics/gyms.png" alt="WorkOut Helper Logo" class="img-fluid" style="max-width: 100px;">
         <h1 class="display-4">WorkOut Helper</h1>
         <h2>Contact Page</h2>
         <h3 class="lead">Let us help you!</h3>
