--- a/nutrition.html
+++ b/nutrition.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <link rel="shortcut icon" href="/Users/marcoscallearevalo/Desktop/Pics/gyms.png">
+  <link rel="shortcut icon" href="Pics/gyms.png">
 
 
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="/Users/marcoscallearevalo/Desktop/CSS/normalize.css">
-  <link rel="stylesheet" href="/Users/marcoscallearevalo/Desktop/CSS/main.css">
-  <link rel="stylesheet" href="/Users/marcoscallearevalo/Desktop/CSS/slicknav.css">
+  <link rel="stylesheet" href="CSS/normalize.css">
+  <link rel="stylesheet" href="CSS/main.css">
+  <link rel="stylesheet" href="CSS/slicknav.css">
 
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -32,7 +32,7 @@
 
 <body>
   <header class="bg-light text-center py-4">
-    <img src="/Users/marcoscallearevalo/Desktop/Pics/gyms.png" alt="WorkOut Helper Logo" class="img-fluid" style="max-width: 100px;">
+    <img src="Pics/gyms.png" alt="WorkOut Helper Logo" class="img-fluid" style="max-width: 100px;">
     <h1 class="display-4">WorkOut Helper</h1>
     <p class="lead">Better Yourself! Bring out the best in you!</p>
   </header>
