--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <link rel="shortcut icon" href="/Users/marcoscallearevalo/Desktop/Pics/gyms.png">
+  <link rel="shortcut icon" href="Pics/gyms.png">
 
 
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
