--- a/nutrition.html
+++ b/nutrition.html
@@ -79,7 +79,7 @@
   <main class="container my-5">
     <article class="mb-5">
       <h1 class="text-center text-primary mb-4">NUTRION PLANS</h1>
-      <img src="/Users/marcoscallearevalo/Desktop/Pics/download.jpg" alt="Healthy Food" class="img-fluid mb-3">
+      <img src="Pics/download.jpg" alt="Healthy Food" class="img-fluid mb-3">
       <p>Nutrition is fundamental to overall health and well-being because it provides the essential nutrients your body needs to function optimally. Here's why nutrition is important:</p>
       <ul>
             <li>Food provides the energy (calories) your body requires to perform everyday activities, from breathing and moving to thinking and growing.</li>
