--- a/workout.html
+++ b/workout.html
@@ -79,8 +79,8 @@
   <main class="container my-5">
     <article class="mb-5">
       <h1 class="text-center text-primary mb-4">No Pain No Gain!</h1>
-      <img src="/Users/marcoscallearevalo/Desktop/download.jpg" alt="Working out" class="img-fluid mb-3">
-      <img src="/Users/marcoscallearevalo/Desktop/A3292CA1-458A-4EC8-A1F2-D5E776A02F31_2_1024x1024.webp" alt="Working out" class="img-fluid mb-3">
+      <img src="Pics/download.jpg" alt="Working out" class="img-fluid mb-3">
+      <img src="Pics/A3292CA1-458A-4EC8-A1F2-D5E776A02F31_2_1024x1024.webp" alt="Working out" class="img-fluid mb-3">
       <p>We offer multiply workout plans for different types of levels!</p>
       <p>In total we offer 4 plans, each level of plan is different for every person. </p>
       <p>If YOU are just beginning your journey in the gym dont worry we got you!</p>
