--- a/home.html
+++ b/home.html
@@ -54,12 +54,8 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="trainerDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Personal Trainer</a>
             <div class="dropdown-menu" aria-labelledby="trainerDropdown">
-              <a class="dropdown-item" href="#">Jeff</a>
-              
-                </div>
-              </div>
-              <a class="dropdown-item" href="march.html">Jeremy</a>
-              <a class="dropdown-item" href="april.html">Ricardo</a>
+              <a class="dropdown-item" href="jeff.html">Jeff</a>
+             
             </div>
           </li>
           <li class="nav-item"><a href="workout.html" class="nav-link">Workout Plan</a></li>
