--- a/nutrition.html
+++ b/nutrition.html
@@ -43,27 +43,23 @@
       
 
   <!-- Desktop Navigation Menu -->
-  <nav id="nav_menu" class="navbar navbar-expand-lg navbar-light bg-light">
+ <nav id="nav_menu" class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a href="sampson.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="home.html" class="nav-link active">Home</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="trainerDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Personal Trainer</a>
             <div class="dropdown-menu" aria-labelledby="trainerDropdown">
-              <a class="dropdown-item" href="#">Jeff</a>
+              <a class="dropdown-item" href="jeff.html">Jeff</a>
              
-                </div>
-              </div>
-              <a class="dropdown-item" href="march.html">Jeremy</a>
-              <a class="dropdown-item" href="april.html">Ricardo</a>
             </div>
           </li>
           <li class="nav-item"><a href="workout.html" class="nav-link">Workout Plan</a></li>
-          <li class="nav-item"><a href="nutrition.html" class="nav-link active">Nutrition Plan</a></li>
+          <li class="nav-item"><a href="nutrition.html" class="nav-link">Nutrition Plan</a></li>
           <li class="nav-item"><a href="cc.html" class="nav-link">Contact</a></li>
         </ul>
       </div>
