--- a/workout.html
+++ b/workout.html
@@ -54,11 +54,8 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="trainerDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Personal Trainer</a>
             <div class="dropdown-menu" aria-labelledby="trainerDropdown">
-              <a class="dropdown-item" href="#">Jeff</a>
-              
-              </div>
-              <a class="dropdown-item" href="march.html">Jeremy</a>
-              <a class="dropdown-item" href="april.html">Ricardo</a>
+              <a class="dropdown-item" href="jeff.html">Jeff</a>
+             
             </div>
           </li>
           <li class="nav-item"><a href="workout.html" class="nav-link">Workout Plan</a></li>
@@ -68,7 +65,6 @@
       </div>
     </div>
   </nav>
-
   <main class="container my-5">
     <article class="mb-5">
       <h1 class="text-center text-primary mb-4">No Pain No Gain!</h1>
