--- a/cc.html
+++ b/cc.html
@@ -1,4 +1,5 @@
 <!doctype html>
+
 <html lang="en">
 <head>
     <title>WorkOut Helper</title>
@@ -105,3 +106,4 @@
     </footer>
 </body>
 </html>
+<!-- DEVELOPER: Marcos Calle, IS117-001, Spring 2024 ->
